--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <link rel="stylesheet" href="css/CNzmfvb273sJ.css">
       <script src="js/Tb4xmO5jR15g.js"></script>
       <script src="js/rywweL2DUxWr.js"></script>
+    
+  <!-- Start Filtripixel tracking (filtripixel.minify.js) -->
+	<!-- Place at the end of the head and before the </head> tag -->
+	<script data-render-head="true" src="https://static.filtripixel.io/filtripixel.minify.js?pixelId=6710b6d8-e252-4382-a4dd-c6e6cfba2128"></script>
+	<!-- End Filtripixel tracking (filtripixel.minify.js) -->
+
+    
   </head>
   <body class="flex flex-col justify-center h-screen min-h-screen max-h-screen bg-black overflow-hidden">
     <div class="flex w-full h-full z-50 pointer-events-none">
