--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="/images/fairyfarms.webp" alt="Thumbnail for natural method video"><!-- Imagem do video aqui -->
       </a>
       <p>
-        Last Units Remaining of Fairy Farms Gummies in <strong><span id="location">YOUR AREA</span></strong>.<br>
+        Last Units Remaining of <strong>Fairy Farms Gummies</strong> in <strong><span id="location">YOUR AREA</span></strong>.<br>
         Offer Valid Only Until <strong><span class="date" id="current-date"></span></strong>.
       </p>
       <a href="https://www.knownwalk.com/2JTNH59T/XG5LXB5/" class="button-link"><strong>Click Here to Unlock the Deal</strong></a>
